diesel_compile_tests/tests/fail/derive_deprecated/deprecated_sql_type.stderr
warning: #[sql_type] attribute form is deprecated
  = help: use `#[diesel(sql_type = foo)]` instead

error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(sql_type = Foo)]`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:10:3
   |
LL | #[sql_type]
   |   ^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:15:11
   |
LL | #[sql_type()]
   |           ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:20:14
   |
LL | #[sql_type = 1]
   |              ^

warning: #[sql_type] attribute form is deprecated
  = help: use `#[diesel(sql_type = 1)]` instead

error: expected identifier
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:25:14
   |
LL | #[sql_type = "1"]
   |              ^^^

warning: #[sql_type] attribute form is deprecated
  = help: use `#[diesel(sql_type = foo)]` instead

error: unexpected end of input, expected `=`
       help: the correct format looks like `#[diesel(sql_type = Foo)]`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:37:7
   |
LL |     #[sql_type]
   |       ^^^^^^^^

error: expected `=`
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:44:15
   |
LL |     #[sql_type()]
   |               ^^

error: expected string literal
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:51:18
   |
LL |     #[sql_type = 1]
   |                  ^

warning: #[sql_type] attribute form is deprecated
  = help: use `#[diesel(sql_type = 1)]` instead

error: expected identifier
  --> tests/fail/derive_deprecated/deprecated_sql_type.rs:58:18
   |
LL |     #[sql_type = "1"]
   |                  ^^^
